my-flask-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: my-flask-app
  name: my-flask-app
  namespace: dev
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: my-flask-app
  type: NodePort
