my-flask-app/templates/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  annotations:
spec:
  defaultBackend:
    service:
      name: my-flask-app
      port:
        number: 5000
